# plugins

./: .gitmodules  CMakeLists.txt  Common.cmake  NosPluginCommon.cmake  PLUGIN_SPLIT.md  README.md  SPLIT_SUMMARY.md
Plugins/: CMakeLists.txt  compile_shaders.py
Plugins/nosAnimation/: .nospub  Animation.noscfg  Animation.nosplugin  CMakeLists.txt
Plugins/nosAnimation/Config/: Animate.nosnode  AnimationCurve.nosnode  InterpolateWithCustomInterpolator.nosnode
Plugins/nosAnimation/Nodes/: Animate.nosnode  AnimationCurve.nosnode  HasCustomInterpolator.nosnode  Interpolate.nosnode  InterpolateWithCustomInterpolator.nosnode
Plugins/nosAnimation/Source/: AnimateNode.cpp  HasCustomInterpolator.cpp  InterpolateWithCustomInterpolator.cpp  PluginMain.cpp
Plugins/nosAnimation/Types/: AnimationExpressionPresets.json
Plugins/nosCompositing/: .nossign  CMakeLists.txt  Compositing.nosplugin
Plugins/nosCompositing/Nodes/: BoxFit.nosnode  CanvasMapper.nosnode  ChannelViewer.nosnode  Grid3D.nosnode  Layout.nosnode  LayoutDrawer.nosnode  LayoutNodes.nosnode  LayoutQuadCanvas.nosnode  Mask.nosnode  Merge.nosnode  Mixer.nosnode  Offset.nosnode  QuadMerge.nosnode  SplitWipe.nosnode  Swizzle.nosnode  TextureMapper.nosnode  TextureSwitcher.nosnode  TextureTransition.nosnode
Plugins/nosCompositing/Shaders/: CanvasMapper.frag  ChannelViewer.frag  Compose.frag  CompositePasses.frag  Default.frag  Grid3D.frag  Grid3D.vert  Label.vert  Mask.frag  Multiply.frag  Offset.frag  QuadMerge.frag  TextureMapper.frag  TexturedQuad.frag  TexturedQuad.vert  TransitionDissolve.frag  TransitionWipe.frag
Plugins/nosCompositing/Source/: BoxFit.cpp  CanvasMapper.cpp  ChannelViewer.cpp  Common.cpp  Common.h  Common.h~  CompositingMain.cpp  FontRendering.cpp  FontRendering.h  Grid3DNode.cpp  Merge.cpp  MixerNode.cpp  PluginMain.cpp  TextureMapperNode.cpp  TextureTransition.cpp  TextureTransitionUtils.cpp  TextureTransitionUtils.h
Plugins/nosCompositing/Types/: BoxFit.fbs  CanvasMapper.fbs  ChannelViewer.fbs  Defaults.json  Layout.fbs  LayoutTypeDefaults.json  Merge.fbs  Mixer.fbs  Resources.json  Swizzle.fbs  TextureSwitcher.fbs  Transition.fbs
Plugins/nosExecution/: Execution.nosplugin
Plugins/nosExecution/Nodes/: CPUSleep.nosnode  ConditionalTrigger.nosnode  ExecDepend.nosnode  Host.nosnode  PropagateExecution.nosnode  RepeatingJunction.nosnode  ScheduleRequest.nosnode  ShowStatusNode.nosnode  Sink.nosnode  SinkGraph.nosnode  ThreadedSyncMultiOutlet.nosnode  TimedFunctionSignaller.nosnode  TriggerOnAnyInput.nosnode
Plugins/nosExecution/Source/: CPUSleep.cpp  ConditionalTrigger.cpp  ExecutionMain.cpp  Host.cpp  MultiLiveOut.cpp  PrintLog.cpp  PropagateExecution.cpp  RepeatingJunction.cpp  ScheduleOnRequest.cpp  ScheduleRequest.cpp  ShowStatusNode.cpp  Sink.cpp  SwitchTrigger.cpp  SyncMultiOutlet.cpp  Time.cpp  TriggerOnAnyInput.cpp
Plugins/nosExecution/Types/: Sink.fbs
Plugins/nosExperiment/: .nossign  CMakeLists.txt  Experiment.nosplugin  Test.noscfg
Plugins/nosExperiment/Config/: FrameInterpolator.nosnode  PartialUpdateTest.nosdef  Test.nosnode  TestGraph.nosdef  Window.nosnode
Plugins/nosExperiment/Nodes/: FrameInterpolator.nosnode  LeakObject.nosnode  PartialBufferCopy.nosnode  PartialTextureCopy.nosnode  PartialUpdateTest.nosnode  Test.nosnode  TestGraph.nosnode  Window.nosnode
Plugins/nosExperiment/Shaders/: BasicInterpolation.frag  ComputeTest1.comp
Plugins/nosExperiment/Source/: FrameInterpolator.cpp  GpuStress.frag  PartialBufferCopy.cpp  PartialTextureCopy.cpp  PartialUpdateTest.cpp  PowNode.py  Test.cpp
Plugins/nosExperiment/Types/: FrameInterpolator.fbs  Test.fbs
Plugins/nosFilters/: .nospub  Filters.noscfg  Filters.nosplugin
Plugins/nosFilters/Config/: CasFilter.nosdef  CasWithColorSpace.nosdef  DepthOfField.nosdef  DirectionalBlur.nosnode  GaussianBlur.nosnode  PremultiplyAlpha.nosnode  Sampler.nosdef  Sharpen.nosnode  Sobel.nosnode
Plugins/nosFilters/Nodes/: 3WayColorCorrect.nosnode  BokehDof.nosnode  BokehShape.nosnode  BoxBlur.nosnode  CasFilter.nosnode  CasWithColorSpace.nosnode  ColorCorrect.nosnode  ColorGradeLUT.nosnode  ColorMatrix.nosnode  Crop.nosnode  Cube3DLUT.nosnode  (+18 more)
Plugins/nosFlow/: .nossign  Flow.nosplugin
Plugins/nosGeometry/: .nospub  CMakeLists.txt  Geometry.noscfg  Geometry.nosplugin
Plugins/nosGraphics/: .nospub  CMakeLists.txt  Graphics.noscfg  Graphics.nosplugin
Plugins/nosImageProcessing/: .nossign  ImageProcessing.nosplugin
Plugins/nosLayoutSystem/: Layout.nosplugin
Plugins/nosMath/: CMakeLists.txt  Math.noscfg  Math.nosplugin  nosMath.nosplugin
Plugins/nosMemory/: Memory.nosplugin
Plugins/nosNoise/: .nospub  CMakeLists.txt  Noise.noscfg  Noise.nosplugin
Plugins/nosPyUtils/: CMakeLists.txt  PyUtils.noscfg  PyUtils.nosplugin
Plugins/nosReflect/: CMakeLists.txt  Reflect.noscfg  Reflect.nosplugin
Plugins/nosRendering/: CMakeLists.txt  Rendering.noscfg
Plugins/nosResource/: .nospub  .nossign  Resource.nosplugin
Plugins/nosStrings/: Strings.noscfg  Strings.nosplugin
Plugins/nosTest/: CMakeLists.txt  Test.noscfg
Plugins/nosTrack/: .nospub  CHANGES.md  CMakeLists.txt  Track.noscfg  Track.nosplugin
Plugins/nosUtilities/: .nospub  CMakeLists.txt  DEPRECATED.md  Utilities.noscfg  Utilities.nosplugin
Plugins/nosUtilities2/: .nospub  .nossign  CMakeLists.txt  Utilities.nosplugin
Plugins/nosWebRTC/: .nospub  CMakeLists.txt  WebRTC.noscfg  WebRTC.nosplugin
Subsystems/: CMakeLists.txt
Subsystems/nosAnimationSubsystem/: CMakeLists.txt  nosAnimationSubsystem.nosplugin  nosAnimationSubsystem.nossys
Subsystems/nosLino/: .nospub  CMakeLists.txt  Lino.nosplugin  Lino.nossys
Subsystems/nosPython/: .nospub  CMakeLists.txt  Python.nosplugin  Python.nossys
Subsystems/nosShaderCompiler/: .nospub  ShaderCompiler.nosplugin
Subsystems/nosSync/: .nossign  CMakeLists.txt  Sync.nosplugin  Sync.nossys
Subsystems/nosTestSubsystem/: CMakeLists.txt
Subsystems/nosTrackSubsystem/: .nospub  .nossign  CMakeLists.txt  nosTrackSubsystem.nossys
Subsystems/nosVariableSubsystem/: CMakeLists.txt  Variable.nosplugin  Variable.nossys
(+693 files in other folders)
